Fix squished logo

--- a/styles.css
+++ b/styles.css
@@ -97,9 +97,10 @@ img {
 }
 
 .site-logo img {
-  height: 200px;
+  height: 80px;
   width: auto;
   display: block;
+  object-fit: contain;
 }
 
 .site-nav {
